--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 <!-- Filter -->
             <section class="section">
                 <div class="container">
-                    <h1 visibility: hidden > our products portfolio</h1>
+                    <h1 class="visually-hidden" > our products portfolio</h1>
                     <ul class="filter list">
                         <li class="filter-btn">
                             <button type="button" class="btn">
@@ -83,65 +83,65 @@
                         <li class="product-position">
                             <img src="./images/tehnocrack.jpg" alt="tehnocrack web site" width="370" height="294">
                             <div class="product-text">
-                                <h2>Технокряк</h2>
-                                <p>Веб-сайт</p>
+                                <h2 class="product-name">Технокряк</h2>
+                                <p class="product-thing">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/basketball.jpg" alt="poster for basketball match New Orleans vs Golden star" width="370"
                                 height="294">
                             <div class="product-text">
-                                <h2>Постер New Orlean vs Golden Star</h2>
-                                <p>Дизайн</p>
+                                <h2 class="product-name">Постер New Orlean vs Golden Star</h2>
+                                <p class="product-thing">Дизайн</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/seafood.jpg" alt="app for seafood restaurant" width="370" height="294">
                             <div class="product-text">
-                                <h2>Ресторан Seafood</h2>
-                                <p>Додаток</p>
+                                <h2 class="product-name">Ресторан Seafood</h2>
+                                <p class="product-thing">Додаток</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/Prime.jpg" alt="marketing for Prime project" width="370" height="294">
                             <div class="product-text">
-                                <h2>Проєкт Prime</h2>
-                                <p>Маркетинг</p>
+                                <h2 class="product-name">Проєкт Prime</h2>
+                                <p class="product-thing">Маркетинг</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/boxes.jpg" alt="app for Boxes project" width="370" height="294">
                             <div class="product-text">
-                                <h2>Проєкт Boxes</h2>
-                                <p>Додаток</p>
+                                <h2 class="product-name">Проєкт Boxes</h2>
+                                <p class="product-thing">Додаток</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/noborders.jpg" alt="web site for Inspiration has no Borders" width="370" height="294">
                             <div class="product-text">
-                                <h2>Inspiration has no Borders</h2>
-                                <p>Веб-сайт</p>
+                                <h2 class="product-name">Inspiration has no Borders</h2>
+                                <p class="product-thing">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/limited.jpg" alt="design for Limited Edition publication" width="370" height="294">
                             <div class="product-text">
-                                <h2>Видання Limited Edition</h2>
-                                <p>Дизайн</p>
+                                <h2 class="product-name">Видання Limited Edition</h2>
+                                <p class="product-thing">Дизайн</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/lab.jpg" alt="marketing for LAB project" width="370" height="294">
                             <div class="product-text">
-                                <h2>Проєкт LAB</h2>
-                                <p>Маркетинг</p>
+                                <h2 class="product-name">Проєкт LAB</h2>
+                                <p class="product-thing">Маркетинг</p>
                             </div>
                         </li>
                         <li class="product-position">
                             <img src="./images/business.jpg" alt="app for Growing Business company" width="370" height="294">
                             <div class="product-text">
-                                <h2>Growing Business</h2>
-                                <p>Додаток</p>
+                                <h2 class="product-name">Growing Business</h2>
+                                <p class="product-thing">Додаток</p>
                             </div>
                         </li>
                     </ul>
