--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- our benefits -->
             <section class="section benefits">
                <div class="container">
-                    <h2 visibility: hidden> Our benefits</h2>
+                    <h2 class="visually-hidden"> Our benefits</h2>
                     <ul class="benefits-list list">
                         <li class="benefits-point">
                             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -83,7 +83,7 @@
 <!-- what we do -->
             <section class="section whatwedo">
                 <div class="container">
-                    <h2>Чим ми займаємося</h2>
+                    <h2 class="whatwedo-head">Чим ми займаємося</h2>
                     <ul class="whatwedo-list list">
                         <li class="whatwedo-point">
                             <img src="./images/img_code.jpg" alt="coding" width="370" height="294">
@@ -101,27 +101,35 @@
 <!-- our team -->
             <section class="team section">
                 <div class="container">
-                    <h2>Наша команда</h2>
+                    <h2 class="team-head">Наша команда</h2>
                     <ul class="team-list list">
                         <li class="team-point">
                             <img src="./images/igor.jpg" alt="Product Designer Igor Demianenko" width="270" height="260">
-                            <h3>Ігор Дем'яненко</h3>
-                            <p>Product Designer</p>
+                            <div class="team-wrap">
+                                <h3 class="team-name">Ігор Дем'яненко</h3>
+                                <p class="team-prof">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-point">
                             <img src="./images/olga.jpg" alt="Frontend Developer Olga Repina" width="270" height="260">
-                            <h3>Ольга Рєпіна</h3>
-                            <p>Frontend Developer</p>
+                            <div class="team-wrap">
+                                <h3 class="team-name">Ольга Рєпіна</h3>
+                                <p class="team-prof">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-point">
                             <img src="./images/mikola.jpg" alt="Marketing Mikola Tarasov" width="270" height="260">
-                            <h3>Микола Тарасов</h3>
-                            <p>Marketing</p>
+                            <div class="team-wrap">
+                                <h3 class="team-name">Микола Тарасов</h3>
+                                <p class="team-prof">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-point">
                             <img src="./images/mihailo.jpg" alt="UI Designer Mihailo Yermakov" width="270" height="260">
-                            <h3>Михайло Єрмаков</h3>
-                            <p>UI Designer</p>
+                            <div class="team-wrap">
+                                <h3 class="team-name">Михайло Єрмаков</h3>
+                                <p class="team-prof">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -130,7 +138,7 @@
         </main>
         
 <!--knock knock, who is there?-->
-        <footer class="section foot">
+        <footer class="foot">
             <div class="container">
                 <!-- logo -->
                 <a href="./index.html" class="logo-foot">
